--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -3,13 +3,16 @@
     <string name="dialog_hint">Symbol (e.g. GOOG)</string>
     <string name="dialog_cancel">Cancel</string>
     <string name="dialog_add">Add</string>
-
     <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
     <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
-
     <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
     <string name="current_price">Current Price</string>
     <string name="symbol_no_exist">%s does not exist.</string>
+    <string name="default_error_text">Error message</string>
+    <string name="default_text_variation">100%</string>
+    <string name="default_symbol_text">GOOG</string>
+    <string name="default_price_text">1000.00</string>
+
 
 </resources>
